# medes

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
adapters/: README.md
adapters/medes_curlpp/: CMakeLists.txt
adapters/medes_curlpp/cmake/: Findcurlpp.cmake
adapters/medes_curlpp/include/medes/adapters/: curlpp_adapter.h
adapters/medes_curlpp/src/: curlpp_adapter.cpp
adapters/medes_dpp/: CMakeLists.txt
adapters/medes_dpp/include/medes/adapters/: dpp_adapter.h
adapters/medes_dpp/src/: dpp_adapter.cpp
cmake/: medes-config.cmake.in
core/: CMakeLists.txt  README.md
core/include/medes/: endpoint_tree_node.h  endpoint_tree_node_collection.h  endpoint_tree_node_concept.h  group.h  http_methods.h  medes.h  path.h  request_protocol.h  service.h
core/include/medes/endpoint/: endpoint.h  path_params.h  query_params.h  resolved_endpoint.h  string_build.h
core/include/medes/internal/: errors.h  meta.h  singleton.h  static_string_map.h  string_convert.h  string_literal.h  type_stack.h
core/include/medes/utilities/: url.h
core/src/: http_methods.cpp  method.cpp  string_build.cpp
docs/: class.puml
examples/: CMakeLists.txt  basic.cpp
examples/basic/: main.cpp
